@@ -1252,13 +1252,25 @@ Tcl_OpenTcpServer(
     const char *errorMsg = NULL;
     TcpFdList *fds = NULL, *newfds;
 
+    /*
+     * Try to record and return the most meaningful error message, i.e. the
+     * one from the first socket that went the farthest before it failed.
+     */
+    enum { START, SOCKET, BIND, LISTEN } howfar = START;
+    int my_errno = 0;
+
     if (!TclCreateSocketAddress(interp, &addrlist, myHost, port, 1, &errorMsg)) {
 	goto error;
     }
 
     for (addrPtr = addrlist; addrPtr != NULL; addrPtr = addrPtr->ai_next) {
-	sock = socket(addrPtr->ai_family, SOCK_STREAM, 0);
+	sock = socket(addrPtr->ai_family, addrPtr->ai_socktype,
+                      addrPtr->ai_protocol);
 	if (sock == -1) {
+	    if (howfar < SOCKET) {
+		howfar = SOCKET;
+		my_errno = errno;
+	    }
 	    continue;
 	}
 	
@@ -1308,6 +1320,10 @@ Tcl_OpenTcpServer(
 
 	status = bind(sock, addrPtr->ai_addr, addrPtr->ai_addrlen);
         if (status == -1) {
+	    if (howfar < BIND) {
+		howfar = BIND;
+		my_errno = errno;
+	    }       
             close(sock);
             continue;
         }
@@ -1326,6 +1342,10 @@ Tcl_OpenTcpServer(
         }
         status = listen(sock, SOMAXCONN);
         if (status < 0) {
+	    if (howfar < LISTEN) {
+		howfar = LISTEN;
+		my_errno = errno;
+	    }
             close(sock);
             continue;
         }
@@ -1367,6 +1387,7 @@ Tcl_OpenTcpServer(
 	return statePtr->channel;
     }
     if (interp != NULL) {
+	errno = my_errno;
 	Tcl_AppendResult(interp, "couldn't open socket: ",
 		Tcl_PosixError(interp), NULL);
 	if (errorMsg != NULL) {
